--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Nigel Tore Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
-
   <body>
-    <h1>Hello World, we're software developers!</h1>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <script  src="js/index.js"></script>
+    <div id="navbar">
+      <ul>
+        <li><a href="#Welcome" target="_blank">Welcome</a></li>
+        <li><a href="#Projects" target="_blank">Projects</a></li>
+        <li><a href="#Profile" target="_blank">Profile</a></li>
+      </ul>
+    </div>
+    <div id="welcome-section">
+      <h1>Welcome to my Portfolio</h1>
+    </div>
+    <div id="projects">
+      <div class="project-tile">
+        <h2>Project 1</h2>
+        <p>Understanding CSS transformations</p>
+        <a href="https://github.com/Nigeltnt/PenguinCSS" target="_blank">Link to Project 1</a>
+      </div>
+    </div>
+    <a id="profile-link" href="https://github.com/Nigeltnt" target="_blank">Visit my GitHub profile</a>
   </body>
 </html>
