Added some styles and edited some text

--- a/index.html
+++ b/index.html
@@ -21,7 +21,23 @@
         <p>Understanding CSS transformations</p>
         <a href="https://github.com/Nigeltnt/PenguinCSS" target="_blank">Link to Project 1</a>
       </div>
+      <div class="project-tile">
+        <h2>Project 2</h2>
+        <p>Tribute Page</p>
+        <a href="https://github.com/Nigeltnt/PenguinCSS" target="_blank">Link to Project 2</a>
+      </div>
+      <div class="project-tile">
+        <h2>Project 3</h2>
+        <p>Landing Page</p>
+        <a href="https://github.com/Nigeltnt/PenguinCSS" target="_blank">Link to Project 3</a>
+      </div>
+      <div class="project-tile">
+        <h2>Project 4</h2>
+        <p>E-commerce site</p>
+        <a href="https://github.com/Nigeltnt/PenguinCSS" target="_blank">Link to Project 4</a>
+      </div>
     </div>
+    
     <a id="profile-link" href="https://github.com/Nigeltnt" target="_blank">Visit my GitHub profile</a>
   </body>
 </html>
